--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
@@ -18,9 +19,13 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-fileupload": "^1.4.0",
+    "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
-    "mongodb": "^4.12.0",
-    "mongoose": "^6.7.2"
+    "method-override": "^3.0.0",
+    "mongodb": "^4.12.1",
+    "mongoose": "^6.7.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
